Got the camper viewer working again :)

--- a/campers.html
+++ b/campers.html
@@ -18,7 +18,7 @@
 
 		<p>Lucille was a 16 seater mini-bus. I whipped out all of her seats and fitted her as a luxury moving home. Some lucky guy picker her up for cheap since I was leaving europe and needed a quick sale during winter...</p>
 
-		<div id="me-lucille-map"></div>
+		<div id="lucille-map"></div>
 	</div>
 </div>
 
@@ -28,13 +28,15 @@
 
 		<p>Gertrude was my first camper van. She was given an ugly name to match her... well... ugliness. When I bought her she was already fitted out but I decided it was shit, pulled everything out and started from scratch. Lots of fun! Sadly Gertrude died and was unable to complete her last mission to Edinburgh. May she rest in peace... as a cube... because I had her crushed into a cube.</p>
 
-		<!--div id="loading">Loading...</div>
+		<div id="loading">Loading...</div>
 
-		<canvas id="me-gertrude-canvas">
+		<canvas id="gertrude">
 			If you're seeing this your web browser doesn't support the &lt;canvas&gt;&gt; element. Ouch!
-		</canvas-->
+		</canvas>
 
-		<div id="me-gertrude-map"></div>
+		<div class="ui divider"></div>
+
+		<div id="gertrude-map"></div>
 	</div>
 </div>
 
