--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 		<script src="campers.js" type="text/javascript"></script>
 		<script src="software.js" type="text/javascript"></script>
 
-		<!--script src="simplicity.js/simplicity.js" type="text/javascript"></script-->
-		<!--script src="camper-viewer/camper-viewer.js" type="text/javascript"></script-->
+		<script src="simplicity.js" type="text/javascript"></script>
+		<script src="camper-viewer.js" type="text/javascript"></script>
 
 		<script id="mirrorVertexShader" type="x-shader/x-vertex">
 			uniform mat4 cameraTransform;
