Send initial page view to google analytics.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 			ga('create', 'UA-85600887-1', 'auto');
+			ga('send', 'pageview', '/home');
 		</script>
 
 		<script src="me.js" type="text/javascript"></script>
