--- a/software.html
+++ b/software.html
@@ -1,6 +1,6 @@
 <div class="ui segment">
 	<div class="ui text container">
-		<p>I have a wide range of experience after 10+ years in the industry. During that time I have consistently stood out as one of the most sought after members of any team from J2EE enterprise applications to mobile apps and games. <a onclick="$(this).fadeOut(); $('.cv').slideDown();">More about my abilities...</a></p>
+		<p>I have a wide range of experience after 10+ years in the industry. During that time I have consistently stood out as one of the most sought after members of any team from enterprise to mobile apps and games. <a onclick="$(this).fadeOut(); $('.cv').slideDown();">More about my abilities...</a></p>
 
 		<div class="cv">
 			<p><strong>I have a passion for high quality code that is as simple as possible.</strong> In my experience the number one cause of bugs and hard to maintain software is complexity. Writing simpler code that does the same job makes it easier for other developers to understand, reduces the chance for bugs, makes it easier to change later on and often even improves performance.</p>
@@ -170,7 +170,7 @@
 		<div class="ui text container">
 			<h2>Matrikon <small><a href="http://www.matrikon.com">[matrikon.com]</a></small></h2>
 
-			<p><strong>Position:</strong> Software Engineer</p>
+			<p><strong>Position:</strong> Senior Developer</p>
 
 			<p>I developed customizations and extensions to the <a href="http://www.maximoassetmanagement.com">Maximo</a> system, an enterprise quality J2EE framework owned by IBM. I also developed integrations to Oracle Apps, SAP and others. The majority of this work was Java coding and database scripting with XML and JSP for the UI elements.</p>
 
