Fixed analytics. Added 'full' software mode.

--- a/software.html
+++ b/software.html
@@ -1,6 +1,6 @@
 <div class="ui segment">
 	<div class="ui text container">
-		<p>I have a wide range of experience after 10+ years in the industry. During that time I have consistently stood out as one of the most sought after members of any team from enterprise to mobile apps and games. <a onclick="$(this).fadeOut(); $('.cv').slideDown();">More about my abilities...</a></p>
+		<p>I have a wide range of experience after 10+ years in the industry. During that time I have consistently stood out as one of the most sought after members of any team from enterprise to mobile apps and games. <a id="cv" onclick="$(this).fadeOut(); $('.cv').slideDown();">More about my abilities...</a></p>
 
 		<div class="cv">
 			<p><strong>I have a passion for high quality code that is as simple as possible.</strong> In my experience the number one cause of bugs and hard to maintain software is complexity. Writing simpler code that does the same job makes it easier for other developers to understand, reduces the chance for bugs, makes it easier to change later on and often even improves performance.</p>
