--- a/campers.html
+++ b/campers.html
@@ -18,7 +18,7 @@
 
 		<p>Lucille was a 16 seater mini-bus. I whipped out all of her seats and fitted her as a luxury moving home. Some lucky guy picker her up for cheap since I was leaving europe and needed a quick sale during winter...</p>
 
-		<div id="lucille-map"></div>
+		<div id="lucille-map" class="map"></div>
 	</div>
 </div>
 
@@ -36,7 +36,7 @@
 
 		<div class="ui divider"></div>
 
-		<div id="gertrude-map"></div>
+		<div id="gertrude-map" class="map"></div>
 	</div>
 </div>
 
