--- a/software.html
+++ b/software.html
@@ -45,7 +45,7 @@
 			<p>Here are some of those projects:</p>
 
 			<div class="ui rush projects grid">
-				<div class="four wide column">
+				<div class="six wide column">
 					<div class="ui vertical fluid tabular menu">
 						<a class="item">Heineken Live</a>
 						<a class="item">TVNZ Mastermind</a>
@@ -56,7 +56,7 @@
 						<a class="item">Monteith's MeatPack Hunt</a>
 					</div>
 				</div>
-				<div class="twelve wide stretched column">
+				<div class="ten wide column">
 					<div class="ui segment">
 						<a href="https://play.google.com/store/apps/details?id=nz.co.heinekenlive&hl=en">
 							<i class="large android icon" />
