Added Red Fox and put more info in Rush Digital.

--- a/software.html
+++ b/software.html
@@ -35,18 +35,61 @@
 <div class="software group">
 	<div class="ui segment">
 		<div class="ui text container">
+			<h2>Red Fox Game Studio <small><a href="http://redfoxgamestudio.com">[redfoxgamestudio.com]</a></small></h2>
+
+			<p><strong>Reference:</strong> Stephen McIntyre (Founder and CEO)</p>
+			<p><strong>Position:</strong> Senior Game Developer</p>
+
+			<p>This indie game dev startup was started by one of my lecturers at the Media Design School and has provided me with some very enjoyable and challenging projects so far.</p>
+
+			<p>The games I've worked on so far include:</p>
+
+			<div class="ui redfox projects grid">
+				<div class="six wide column">
+					<div class="ui vertical fluid tabular menu">
+						<a class="item">Solitaire Classic</a>
+						<a class="item">Nakomo Kingdom TD</a>
+					</div>
+				</div>
+				<div class="ten wide column">
+					<div class="ui segment">
+						<a class="ui icon" href="http://redfoxgamestudio.com/solitaireclassic/">
+							<i class="large info icon" />
+						</a>
+
+						<p>This game was developed in Unity and is currently in closed beta testing. The scripting is in C# and the target platforms are Android and iOS. I was the primary developer through a lot of it's development.</p>
+
+						<img src="images/solitaire-classic.jpg" />
+					</div>
+
+					<div class="ui segment">
+						<a class="ui icon" href="http://redfoxgamestudio.com/nakomo-kingdom-td/">
+							<i class="large info icon" />
+						</a>
+
+						<p>Inspired by <a href="http://www.kingdomthegame.com/">Kingdom: New Lands</a>, this game is currently being developed in Unity. The scripting is in C# and the target platform is Steam. I have been the primary developer on the project so far.</p>
+
+						<img src="images/nakomo-kingdom-td.png" />
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="ui inverted segment">
+		<div class="ui text container">
 			<h2>Rush Digital <small><a href="http://rushdigital.nz">[rushdigital.nz]</a></small></h2>
 
 			<p><strong>Reference:</strong> Danushka Abeysuriya (Founder and CEO)</p>
 			<p><strong>Position:</strong> Senior Software Engineer</p>
 
-			<p>I get to work on a lot of projects that were very technically challenging with a wide range of platforms and technologies.</p>
+			<p>I get to work on a lot of projects that were very technically challenging with a wide range of platforms and technologies. This has given me a wide range of experience to call upon and a fresh set of eyes that are not chained to a particular way of thinking.</p>
 
-			<p>Here are some of those projects:</p>
+			<p>Quite a few of the projects I worked on cannot be shown here (prototypes and unreleased apps etc.) but here are some of them:</p>
 
 			<div class="ui rush projects grid">
 				<div class="six wide column">
-					<div class="ui vertical fluid tabular menu">
+					<div class="ui inverted vertical fluid tabular menu">
 						<a class="item">Heineken Live</a>
 						<a class="item">TVNZ Mastermind</a>
 						<a class="item">Jelly Car 3</a>
@@ -57,7 +100,7 @@
 					</div>
 				</div>
 				<div class="ten wide column">
-					<div class="ui segment">
+					<div class="ui inverted segment">
 						<a href="https://play.google.com/store/apps/details?id=nz.co.heinekenlive&hl=en">
 							<i class="large android icon" />
 						</a>
@@ -65,12 +108,12 @@
 							<i class="large apple icon" />
 						</a>
 
-						<p>We created this app for Heineken that uses uses GPS and iBeacon to find your next watering hole and then rewards you.</p>
+						<p>We created this app for Heineken that uses GPS and iBeacon to find your next watering hole and then rewards you. I worked mostly on the CMS website (Angular) and server-side C# Web API but I also spent some time on the native Android app.</p>
 
 						<img src="images/heineken-live.jpg" />
 					</div>
 
-					<div class="ui segment">
+					<div class="ui inverted segment">
 						<a href="https://play.google.com/store/apps/details?id=nz.co.rushdigital.mastermind&hl=en">
 							<i class="large android icon" />
 						</a>
@@ -78,12 +121,12 @@
 							<i class="large apple icon" />
 						</a>
 	
-						<p>We created this game for TVNZ to go along with the TV show of the same name.</p>
+						<p>We created this game for TVNZ to go along with the TV show of the same name. For most of the project's life I was a sole developer creating both a server-side in C# Web API and the app using Ionic which was deployed to both Android and iOS.</p>
 
 						<img src="images/tvnz-mastermind.jpg" />
 					</div>
 
-					<div class="ui segment">
+					<div class="ui inverted segment">
 						<a class="ui icon" href="http://apps.microsoft.com/windows/en-nz/app/jellycar-3/e3aaaa50-398e-4956-b287-926aaad50587">
 							<i class="large windows icon" />
 						</a>
@@ -91,12 +134,12 @@
 							<i class="large mobile icon" />
 						</a>
 
-						<p>We ported this C++ game to Windows 8 and Windows Phone. This also involved implementation of an OpenGL => DirectX translation layer.</p>
+						<p>We ported this C++ game to Windows 8 and Windows Phone. This also involved implementation of an OpenGL => DirectX translation layer. I was one of a two-man developer team that achieved this in just a few weeks.</p>
 
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/f8iTy12E5bs" frameborder="0" allowfullscreen></iframe>
 					</div>
 
-					<div class="ui segment">
+					<div class="ui inverted segment">
 						<a class="ui icon" href="http://apps.microsoft.com/windows/en-nz/app/disney-hidden-worlds/a16336c5-1eef-4cd5-8402-46f816565200">
 							<i class="large windows icon" />
 						</a>
@@ -109,7 +152,7 @@
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/qYp_GpQSOsI" frameborder="0" allowfullscreen></iframe>
 					</div>
 
-					<div class="ui segment">
+					<div class="ui inverted segment">
 						<a href="http://apps.microsoft.com/windows/en-nz/app/words-of-wonder/794e8866-6062-4dd6-86f4-f7acb5e43b4c">
 							<i class="large windows icon" />
 						</a>
@@ -122,7 +165,7 @@
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/fBkerY825H4" frameborder="0" allowfullscreen></iframe>
 					</div>
 
-					<div class="ui segment">
+					<div class="ui inverted segment">
 						<a href="http://apps.microsoft.com/windows/en-nz/app/artrage-touch/ad40b9b5-7ccd-446f-b6fd-04aa9cce02ea">
 							<i class="large windows icon" />
 						</a>
@@ -132,7 +175,7 @@
 						<img src="images/artrage.jpg" />
 					</div>
 
-					<div class="ui segment">
+					<div class="ui inverted segment">
 						<a class="ui icon" href="https://play.google.com/store/apps/details?id=nz.co.monteiths.meatpackhunt&hl=en">
 							<i class="large android icon" />
 						</a>
@@ -149,7 +192,7 @@
 		</div>
 	</div>
 
-	<div class="ui inverted segment">
+	<div class="ui segment">
 		<div class="ui text container">
 			<h2>Bravura Solutions <small><a href="http://www.bravurasolutions.com">[bravurasolutions.com]</a></small></h2>
 
@@ -166,7 +209,7 @@
 		</div>
 	</div>
 
-	<div class="ui segment">
+	<div class="ui inverted segment">
 		<div class="ui text container">
 			<h2>Matrikon <small><a href="http://www.matrikon.com">[matrikon.com]</a></small></h2>
 
@@ -180,7 +223,7 @@
 		</div>
 	</div>
 
-	<div class="ui inverted segment">
+	<div class="ui segment">
 		<div class="ui text container">
 			<h2>Quadratek <small><a href="http://www.quadratekgroup.com">[quadratekgroup.com]</a></small></h2>
 
