--- a/software.html
+++ b/software.html
@@ -57,7 +57,7 @@
 							<i class="large info icon" />
 						</a>
 
-						<p>This game was developed in Unity and is currently in closed beta testing. The scripting is in C# and the target platforms are Android and iOS. I was the primary developer through a lot of it's development.</p>
+						<p>This game was developed in Unity3d and is currently in closed beta testing. The scripting is in C# and the target platforms are Android and iOS. I was the primary developer through a lot of it's development.</p>
 
 						<img src="images/solitaire-classic.jpg" />
 					</div>
@@ -67,7 +67,7 @@
 							<i class="large info icon" />
 						</a>
 
-						<p>Inspired by <a href="http://www.kingdomthegame.com/">Kingdom: New Lands</a>, this game is currently being developed in Unity. The scripting is in C# and the target platform is Steam. I have been the primary developer on the project so far.</p>
+						<p>Inspired by <a href="http://www.kingdomthegame.com/">Kingdom: New Lands</a>, this game is currently being developed in Unity3d. The scripting is in C# and the target platform is Steam. I have been the primary developer on the project so far.</p>
 
 						<img src="images/nakomo-kingdom-td.png" />
 					</div>
