A couple of extra details.

--- a/software.html
+++ b/software.html
@@ -11,7 +11,7 @@
 
 			<p>I have experience with lots of platforms: Android, iOS, Windows RT, Windows Phone and Linux</p>
 
-			<p>using lots of languages: C++, Java, C#, HTML/CSS, JavaScript and Python</p>
+			<p>using lots of languages: C++, Java, C#, HTML/CSS, JavaScript (and TypeScript), Python and SQL</p>
 
 			<p>and too many technologies, libraries and frameworks etc. to list here.</p>
 
@@ -57,7 +57,7 @@
 							<i class="large info icon" />
 						</a>
 
-						<p>This game was developed in Unity3d and is currently in closed beta testing. The scripting is in C# and the target platforms are Android and iOS. I was the primary developer through a lot of it's development.</p>
+						<p>This game was developed in Unity3d and is currently in closed beta testing. The scripting is in C# and the target platforms are Android and iOS. GameSparks is used server-side. I was the primary developer through a lot of it's development.</p>
 
 						<img src="images/solitaire-classic.jpg" />
 					</div>
