More detail for Red Fox and Rush Digital.

--- a/software.html
+++ b/software.html
@@ -40,9 +40,7 @@
 			<p><strong>Reference:</strong> Stephen McIntyre (Founder and CEO)</p>
 			<p><strong>Position:</strong> Senior Game Developer</p>
 
-			<p>This indie game dev startup was started by one of my lecturers at the Media Design School and has provided me with some very enjoyable and challenging projects so far.</p>
-
-			<p>The games I've worked on so far include:</p>
+			<p>I have contracted with Red Fox a few times to work as the primary developer on titles. All of their games are built using the Unity3D game engine in which the coding was done in C#. On the server-side I used GameSparks which involved JavaScript and MongoDB.</p>
 
 			<div class="ui redfox projects grid">
 				<div class="six wide column">
@@ -83,7 +81,9 @@
 			<p><strong>Reference:</strong> Danushka Abeysuriya (Founder and CEO)</p>
 			<p><strong>Position:</strong> Senior Software Engineer</p>
 
-			<p>I get to work on a lot of projects that were very technically challenging with a wide range of platforms and technologies. This has given me a wide range of experience to call upon and a fresh set of eyes that are not chained to a particular way of thinking.</p>
+			<p>I have contracted with Rush Digital many times now with varying contract lengths. During my time there I worked on a wide range of projects. During many of those engagements they were confident enough in my abilities that they gave me whole projects for high profile clients like Fonterra and TVNZ that I then developed on my own with a high level of independence.</p>
+
+			<p>The projects I worked on ranged from game ports in C++ to cross-platform apps in Ionic/Angular 2, native Android apps and bespoke systems. I also implemented multiple RESTful servers in Azure and AWS using .NET, Node.js, MySQL etc.</p>
 
 			<p>Quite a few of the projects I worked on cannot be shown here (prototypes and unreleased apps etc.) but here are some of them:</p>
 
